project_autoscaling/apache_LT.tf
# Launch Template for Instance Security Group Apache
resource "aws_security_group" "LT-apache-sg" {
    description = "Allow traffic from my ALB"
    vpc_id = aws_vpc.main.id
  

   ingress {
    from_port       = 80
    to_port         = 80
    protocol        = "tcp"
    security_groups = [aws_security_group.alb-apache-sg.id]
  }

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"] 
  }

   tags = {
    name = "${var.project-apache}-LT-sg-apache"
  }
}

# Launch Template
resource "aws_launch_template" "apache-lt" {
  name = "apache-launch-template"
  image_id = "${var.ami}"
  instance_type = "t2.micro"
  vpc_security_group_ids = [aws_security_group.alb-apache-sg.id]
  user_data = filebase64("apache.sh")

  tag_specifications {
    resource_type = "instance"

     tags = {
    name = "${var.project-apache}-LT-apache"
  }
  }
}
